fixed the left padding of navbar because it was overlapping with the CONTAINER in some devices

--- a/LAYOUT/menu.css
+++ b/LAYOUT/menu.css
@@ -68,7 +68,7 @@ nav{
 
      display: flex;
      align-items: center;
-     padding-left: 20%;
+     padding-left: 5%;
 }
 nav ul li{
      list-style-type: none;
